# Game-A

./: .clang-format  .gitignore  CMakeLists.txt
include/: main.h  single_instance.h
src/: main.c
src/platform/: single_instance_posix.c  single_instance_windows.c
